--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "table_sort.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,15 @@
   "homepage": "https://github.com/redaktorscha/task-4#readme",
   "description": "",
   "devDependencies": {
-    "typescript": "^3.1.3"
-  }
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.6.0",
+    "regenerator-runtime": "^0.12.1",
+    "typescript": "^3.1.1"
+  },
+  "jest": {
+    "collectCoverage": true
+  },
+  "dependencies": {}
 }
